<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.stocksearch.MainActivity"
    android:background="@drawable/restaurant">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="60dp"
        android:text="@string/submit_btn"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear_btn"
        app:layout_constraintEnd_toStartOf="@+id/clear_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear_btn"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete" />

    <TextView
        android:id="@+id/favorites_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="34dp"
        android:text="@string/favorites_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

    <Switch
        android:id="@+id/autorefresh_btn"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:text="@string/autorefresh_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/favorites_text"
        app:layout_constraintStart_toEndOf="@+id/favorites_text" />

    <ImageButton
        android:id="@+id/refresh_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/refresh_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/autorefresh_btn"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete"
        app:srcCompat="@drawable/ic_cached_black_24dp" />

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_text" />

    <Spinner
        android:id="@+id/order_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/sort_spinner"
        app:layout_constraintTop_toBottomOf="@+id/favorites_text" />

    <ListView
        android:id="@+id/listview_favorite"
        android:layout_width="344dp"
        android:layout_height="209dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_spinner" />


</android.support.constraint.ConstraintLayout>
