<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.stocksearch.StockResultsActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/details_text"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/fb_btn"
                    android:layout_width="42dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/facebook"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/favorites_btn"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/empty"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fb_btn"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/list_proBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="155dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />

            <ListView
                android:id="@+id/listview_stock"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                android:scrollbars="none"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fb_btn" />


            <RelativeLayout
                android:id="@+id/stockcharts_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/listview_stock">

                <TextView
                    android:id="@+id/indicator_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/indicator_text"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/indicator_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/indicator_text"
                    android:layout_centerHorizontal="true"
                    android:entries="@array/indicator_arr" />

                <Button
                    android:id="@+id/change_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:text="@string/change_btn" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/stockcharts_container">

                <ProgressBar
                    android:id="@+id/chart_proBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.498"
                    tools:layout_editor_absoluteX="8dp" />

                <WebView
                    android:id="@+id/chartsView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></WebView>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>